--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -98,11 +98,16 @@ sonata_block:
         sonata.user.block.account: # used to display menu option (login option)
 
 fos_user:
-    db_driver: orm
-    firewall_name: main
-    user_class: AppBundle\Entity\User
-    group:
-        group_class: Application\Sonata\UserBundle\Entity\Group
+  db_driver:  orm # can be orm or odm
+  firewall_name:  main
+  user_class:  Application\Sonata\UserBundle\Entity\User
+
+  group:
+    group_class:  Application\Sonata\UserBundle\Entity\Group
+    group_manager: sonata.user.orm.group_manager
+
+  service:
+    user_manager: sonata.user.orm.user_manager
 
 sonata_admin:
     title:      Панель управления
