--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,14 +5,16 @@ security:
 
     firewalls:
         main:
-            pattern:      .*
+            pattern:      /admin(.*)
             form-login:
                 provider:       fos_userbundle
-                login_path:     /login
+                login_path:     /admin/login
                 use_forward:    false
-                check_path:     /login_check
+                check_path:     /admin/login_check
                 failure_path:   null
-            logout:       true
+            logout:
+                path:   /admin/logout
+                target: /admin
             anonymous:    true
 
     access_control:
@@ -25,16 +27,16 @@ security:
         - { path: ^/css/, role: IS_AUTHENTICATED_ANONYMOUSLY }
 
         # URL of FOSUserBundle which need to be available to anonymous users
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/login_check$, role: IS_AUTHENTICATED_ANONYMOUSLY } # for the case of a failed login
-        - { path: ^/user/new$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/user/check-confirmation-email$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/user/confirm/, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/user/confirmed$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/user/request-reset-password$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/user/send-resetting-email$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/user/check-resetting-email$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/user/reset-password/, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/login_check$, role: IS_AUTHENTICATED_ANONYMOUSLY } # for the case of a failed login
+        - { path: ^/admin/user/new$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/user/check-confirmation-email$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/user/confirm/, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/user/confirmed$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/user/request-reset-password$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/user/send-resetting-email$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/user/check-resetting-email$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/user/reset-password/, role: IS_AUTHENTICATED_ANONYMOUSLY }
 
         # Secured part of the site
         # This config requires being logged for the whole site and having the admin role for the admin part.
