--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,14 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "sonata-project/admin-bundle": "^2.3",
         "sonata-project/doctrine-orm-admin-bundle": "^2.3",
-        "sonata-project/user-bundle": "^2.2"
+        "sonata-project/user-bundle": "^2.2",
+        "sonata-project/formatter-bundle": "^2.3",
+        "sonata-project/media-bundle": "^2.3",
+        "sonata-project/intl-bundle": "^2.2",
+        "jms/serializer-bundle": "~0.13",
+        "gedmo/doctrine-extensions": "^2.4",
+        "pixassociates/sortable-behavior-bundle": "^1.0",
+        "stof/doctrine-extensions-bundle": "^1.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
